oci/traefik/policies/linkerd-policies.yaml
---
# AuthorizationPolicy for health probes
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: traefik-health
  namespace: traefik
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: traefik-health
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
---
# AuthorizationPolicy for proxy admin
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: proxy-admin
  namespace: traefik
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: proxy-admin
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
